; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopdm.c_m68k_op_movep_16_re.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopdm.c_m68k_op_movep_16_re.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m68k_op_movep_16_re() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 (...) @EA_AY_DI_16()
  store i32 %3, i32* %1, align 4
  %4 = load i32, i32* @DX, align 4
  store i32 %4, i32* %2, align 4
  %5 = load i32, i32* %1, align 4
  %6 = load i32, i32* %2, align 4
  %7 = ashr i32 %6, 8
  %8 = call i32 @MASK_OUT_ABOVE_8(i32 %7)
  %9 = call i32 @m68ki_write_8(i32 %5, i32 %8)
  %10 = load i32, i32* %1, align 4
  %11 = add nsw i32 %10, 2
  store i32 %11, i32* %1, align 4
  %12 = load i32, i32* %2, align 4
  %13 = call i32 @MASK_OUT_ABOVE_8(i32 %12)
  %14 = call i32 @m68ki_write_8(i32 %11, i32 %13)
  ret void
}

declare dso_local i32 @EA_AY_DI_16(...) #1

declare dso_local i32 @m68ki_write_8(i32, i32) #1

declare dso_local i32 @MASK_OUT_ABOVE_8(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
